--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wachtwoord generator</title>
+    <link rel="stylesheet" href="styles/main.css" />
   </head>
-  <body></body>
+  <body>
+    <div id="container">
+      <div id="imageWrapper">
+        <img
+          id="mijnAfbeelding"
+          src="images/potion1.png"
+          alt="Beschrijving van de afbeelding"
+        />
+      </div>
+    </div>
+    <script src="js/main.js"></script>
+  </body>
 </html>
