achtergrond afbeelding is toegevoegd, en een actie wanneer de linkerafbeelding op de rechterafbeelding wordt gesleept

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
   </head>
   <body>
     <div id="container">
+      <!-- Achtergrondafbeelding via img -->
+      <img src="images/Achtergrond.png" alt="Achtergrond" id="background" />
+
+      <!-- De kleine afbeeldingen die bovenop de achtergrond komen -->
       <div id="imageWrapper">
-        <img
-          id="mijnAfbeelding"
-          src="images/potion1.png"
-          alt="Beschrijving van de afbeelding"
-        />
+        <img id="mijnAfbeelding" src="images/potion1.png" alt="Flesje" />
+        <img id="mijnAfbeelding2" src="images/potion2.png" alt="Flesje" />
       </div>
     </div>
     <script src="js/main.js"></script>
