--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 
       <!-- De kleine afbeeldingen die bovenop de achtergrond komen -->
       <div id="imageWrapper">
-        <img id="mijnAfbeelding" src="images/potion1.png" alt="Flesje" />
-        <img id="mijnAfbeelding2" src="images/potion2.png" alt="Flesje" />
+        <img id="mijnAfbeelding1" src="images/flesje1.png" alt="Flesje" />
+        <img id="mijnAfbeelding2" src="images/flesje2.png" alt="Flesje" />
+        <img id="mijnAfbeelding3" src="images/flesje3.png" alt="Flesje" />
+        <img id="mijnAfbeelding4" src="images/flesje4.png" alt="Flesje" />
+        <img id="mijnAfbeelding5" src="images/ketel.png" alt="Ketel" />
       </div>
     </div>
     <script src="js/main.js"></script>
