Wachtwoord elementen kunnen nu aan en uit worden gezet door de flesjes naar de ketel te slepen

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
+    <!-- Het wachtwoord die bovenop de achtergrond komt -->
+    <p>Gegenereerd wachtwoord: <span id="passwordOutput"></span></p>
+    <button onclick="generateAndDisplayPassword()">Genereer Wachtwoord</button>
     <div id="container">
       <!-- Achtergrondafbeelding via img -->
       <img src="images/Achtergrond.png" alt="Achtergrond" id="background" />
