--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
-    <!-- Het wachtwoord die bovenop de achtergrond komt -->
-    <p>Gegenereerd wachtwoord: <span id="passwordOutput"></span></p>
-    <button onclick="generateAndDisplayPassword()">Genereer Wachtwoord</button>
     <div id="container">
       <!-- Achtergrondafbeelding via img -->
       <img src="images/Achtergrond.png" alt="Achtergrond" id="background" />
+
+      <!-- Titel -->
+      <h1 id="titel"><span>Wachtwoord Generator</span></h1>
 
       <!-- De kleine afbeeldingen die bovenop de achtergrond komen -->
       <div id="imageWrapper">
@@ -21,6 +21,13 @@
         <img id="mijnAfbeelding3" src="images/flesje3.png" alt="Flesje" />
         <img id="mijnAfbeelding4" src="images/flesje4.png" alt="Flesje" />
         <img id="mijnAfbeelding5" src="images/ketel.png" alt="Ketel" />
+        <!-- Generator button -->
+        <button onclick="generateAndDisplayPassword()">Genereer</button>
+      </div>
+
+      <!-- Het gegenereerde wachtwoord -->
+      <div id="passwordgendiv">
+        <p>Wachtwoord: <span id="passwordOutput"></span></p>
       </div>
     </div>
     <script src="js/main.js"></script>
