input veld toegevoegd waarmee je de lengte van het wachtwoord kan bepalen

--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
       <!-- Titel -->
       <h1 id="titel"><span>Wachtwoord Generator</span></h1>
 
+      <!-- Inputveld voor lengte wachtwoord -->
+      <div id="inputWrapper">
+        <label for="numberInput">Voer een cijfer in:</label>
+        <input
+          type="number"
+          id="numberInput"
+          name="numberInput"
+          min="0"
+          max="100"
+          step="1"
+        />
+      </div>
+
       <!-- De kleine afbeeldingen die bovenop de achtergrond komen -->
       <div id="imageWrapper">
         <img id="mijnAfbeelding1" src="images/flesje1.png" alt="Flesje" />
