--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
       <!-- Inputveld voor lengte wachtwoord -->
       <div id="inputWrapper">
-        <label for="numberInput">Voer een cijfer in:</label>
+        <label for="numberInput">Lengte:</label>
         <input
           type="number"
           id="numberInput"
@@ -34,6 +34,7 @@
         <img id="mijnAfbeelding3" src="images/flesje3.png" alt="Flesje" />
         <img id="mijnAfbeelding4" src="images/flesje4.png" alt="Flesje" />
         <img id="mijnAfbeelding5" src="images/ketel.png" alt="Ketel" />
+
         <!-- Generator button -->
         <button onclick="generateAndDisplayPassword()">Genereer</button>
       </div>
