Categorie namen toegevoegd onder de afbeeldingen van de flesjes

--- a/index.html
+++ b/index.html
@@ -27,12 +27,16 @@
         />
       </div>
 
-      <!-- De kleine afbeeldingen die bovenop de achtergrond komen -->
+      <!-- Afbeeldingen van de flesjes met bijbehorende categorie -->
       <div id="imageWrapper">
         <img id="mijnAfbeelding1" src="images/flesje1.png" alt="Flesje" />
+        <p id="mijnTekst1">Lowercase</p>
         <img id="mijnAfbeelding2" src="images/flesje2.png" alt="Flesje" />
+        <p id="mijnTekst2">Uppercase</p>
         <img id="mijnAfbeelding3" src="images/flesje3.png" alt="Flesje" />
+        <p id="mijnTekst3">Cijfers</p>
         <img id="mijnAfbeelding4" src="images/flesje4.png" alt="Flesje" />
+        <p id="mijnTekst4">Symbolen</p>
         <img id="mijnAfbeelding5" src="images/ketel.png" alt="Ketel" />
 
         <!-- Generator button -->
