Glitter plaatjes voor indicatie staan op de goeie plek

--- a/index.html
+++ b/index.html
@@ -31,12 +31,20 @@
       <div id="imageWrapper">
         <img id="mijnAfbeelding1" src="images/flesje1.png" alt="Flesje" />
         <p id="mijnTekst1">Lowercase</p>
+        <img id="glitter1" src="images/glitter.png" alt="Glitter" />
+
         <img id="mijnAfbeelding2" src="images/flesje2.png" alt="Flesje" />
         <p id="mijnTekst2">Uppercase</p>
+        <img id="glitter2" src="images/glitter.png" alt="Glitter" />
+
         <img id="mijnAfbeelding3" src="images/flesje3.png" alt="Flesje" />
         <p id="mijnTekst3">Cijfers</p>
+        <img id="glitter3" src="images/glitter.png" alt="Glitter" />
+
         <img id="mijnAfbeelding4" src="images/flesje4.png" alt="Flesje" />
         <p id="mijnTekst4">Symbolen</p>
+        <img id="glitter4" src="images/glitter.png" alt="Glitter" />
+
         <img id="mijnAfbeelding5" src="images/ketel.png" alt="Ketel" />
 
         <!-- Generator button -->
