layout beetje verbeterd. sterkte-score toegevoegd

--- a/index.html
+++ b/index.html
@@ -55,6 +55,16 @@
         <button onclick="generateAndDisplayPassword()">Genereer</button>
       </div>
 
+      <!-- Score van het wachtwoord-->
+      <div id="passwordstrengthdiv">
+        <p>
+          <span id="passwordStrength"></span> (<span
+            id="passwordPercentage"
+          ></span
+          >%)
+        </p>
+      </div>
+
       <!-- Het gegenereerde wachtwoord -->
       <div id="passwordgendiv">
         <p>Wachtwoord: <span id="passwordOutput"></span></p>
